--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 MASTER=localhost:5432
-SLAVES=localhost:5432,localhost:5432
+SLAVES=localhost:5432,localhost:5432,localhost:5433
 LISTEN_ADDRESS=localhost:5435
 PING_INTERVAL=2
 HTTP_LISTENER=localhost:2020
 JWT_SECRETE=TOMIWA
 ADMIN_USER=melon
 ADMIN_PASSWORD=melon
+CONNECTION_POOL_SIZE=10
